stateDiagram-v2
  [*] --> INIT
  INIT --> HANDSHAKING: on_connected()
  HANDSHAKING --> STREAMING: on_first_data() / on_heartbeat()
  STREAMING --> DRAINING: on_eof_sent() / on_eof_received()
  DRAINING --> TERMINATED: on_ack() with no pending
  STREAMING --> FAILED: on_error() / heartbeat timeout
  DRAINING --> FAILED: on_error()
  HANDSHAKING --> FAILED: on_error()
  TERMINATED --> [*]
  FAILED --> [*]
  STREAMING --> STREAMING: on_frame_sent() / ACK pending
  DRAINING --> DRAINING: pending ACKs remain
